--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "deep-parse-json": "^1.0.2",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
