feat: 로거 서비스 생성 및 추가

--- a/config/production.yml
+++ b/config/production.yml
@@ -1,4 +1,8 @@
 db:
   database: 'prod'
-  synchronize: false
+  synchronize: true
+  --- false로 수정하여야 한다 (테스트용)
+  logging: false
+
+app:
   logging: false
