--- a/config/production.yml
+++ b/config/production.yml
@@ -1,7 +1,6 @@
 db:
   database: 'prod'
-  synchronize: true
-  --- false로 수정하여야 한다 (테스트용)
+  synchronize: true --- false로 수정하여야 한다 (테스트용)
   logging: false
 
 app:
