--- a/config/default.yml
+++ b/config/default.yml
@@ -5,8 +5,8 @@ db:
   type: 'mysql'
   port: 3306
   host: 'localhost'
-  username: 'admin'
-  password: '12345'
+  username: 'your name here!'
+  password: 'your password here!'
 
 jwt:
   access:
