--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -21,6 +21,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm run prebuild
+      - run: npm install
       - run: npm run build
       - run: npm test
