--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -16,11 +16,16 @@ jobs:
         node-version: [16.x]
 
     steps:
+      - name: Checkout source code
       - uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
       - run: npm install
-      - run: npm run build
-      - run: npm test
+
+      - name: Build
+      - run: npm run build  
